--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@prisma/client": "^6.17.1",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.11.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.5",
+    "next-sanity": "^11.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sanity": "^4.11.0",
+    "styled-components": "^6.1.19",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
